--- a/phaohoa.html
+++ b/phaohoa.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>From Tiendz78 w Love!!</title>
 
     <style>
         html,
@@ -43,7 +43,7 @@
             font-size: 40pt;
             z-index: 1;
             top: 45%;
-            left: 40%;
+            left: 37%;
             text-align: center;
             display: none;
         }
